syntax = "proto3";

option java_package = "com.brijwel.datastore";
option java_multiple_files = true;

message UserData{
  string firstName=1;
  string lastName=2;
  string dob=3;
  string contact=4;
}